--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="LW1111.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Press+Start+2P&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>11:11</title>
   </head>
   <body>
@@ -15,9 +18,9 @@
       <div id="countdown"></div>
       <p class="message">Êtes-vous prêt.e.s à briser la boucle ?</p>
     </div>
-    <div id="vhs" style="display: none;">
+    <div id="vhs" style="display: none">
       <img id="K7" src="VHS.webp" alt="VHS" />
-      <video id="myVideo" style="display: none;">
+      <video id="myVideo" style="display: none">
         Votre navigateur ne prend pas en charge la lecture de vidéos.
       </video>
     </div>
